--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 node_modules/
+04-calculadora-react-main/
+oldie-main/
+portfolio/
+PROYECTO_FINAL_CURSO1/
+ProyectoINES/
+proyectoRecetas/
+REACT CLASES/
+react-master/
+reactproyects/
+UXUI/
+proyectos prog - Acceso directo.lnk/
